[build-system]
requires = ["hatchling", "hatch-requirements-txt", "hatch-fancy-pypi-readme>=22.5.0"]
build-backend = "hatchling.build"

[project]
name = "gradio_client"
dynamic = ["version", "dependencies", "readme"]
description = "Python library for easily interacting with trained machine learning models"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  { name = "Abubakar Abid", email = "gradio-team@huggingface.co" },
  { name = "Ali Abid", email = "gradio-team@huggingface.co" },
  { name = "Ali Abdalla", email = "gradio-team@huggingface.co" },
  { name = "Dawood Khan", email = "gradio-team@huggingface.co" },
  { name = "Ahsen Khaliq", email = "gradio-team@huggingface.co" },
  { name = "Pete Allen", email = "gradio-team@huggingface.co" },
  { name = "Freddy Boulton", email = "gradio-team@huggingface.co" },
]
keywords = ["machine learning", "client", "API"]

classifiers = [
  'Development Status :: 4 - Beta',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Software Development :: User Interfaces',
]

[project.urls]
Homepage = "https://github.com/gradio-app/gradio"

[tool.hatch.version]
path = "gradio_client/package.json"
pattern = ".*\"version\":\\s*\"(?P<version>[^\"]+)\""

[tool.hatch.metadata.hooks.requirements_txt]
filename = "requirements.txt"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
  { path = "README.md" },
]

[tool.hatch.build.targets.sdist]
include = [
  "/gradio_client",
  "/README.md",
  "/requirements.txt",
]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = [
  "gradio_client"
]

[tool.pytest.ini_options]
GRADIO_ANALYTICS_ENABLED = "False"
HF_HUB_DISABLE_TELEMETRY =  "1"
